[project]
name = "comfyui-doomflux-nodes"
description = "Custom nodes for FLUX models, including a loader and specialized samplers for standard and inpaint generation."
version = "1.2.0"
license = "MIT"
authors = [
    { name = "PeterMikhai", email = "petemaster@mail.ru" }
]

[project.urls]
Repository = "https://github.com/PeterMikhai/Doom_Flux_NodePack.git"
# Bug Tracker = "https://github.com/USERNAME/repo/issues"
# New Features = "https://github.com/USERNAME/repo/issues"

[tool.comfy]
PublisherId = "petermikhai"
DisplayName = "DoomFLUX Nodes"
Icon = "https://raw.githubusercontent.com/PeterMikhai/Doom_Flux_NodePack/master/assets/icon.png"